# long_memory_cycles

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  notebook.ipynb  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: data_flow_diagram.md  development.md  implementation_notes.md  index.md  mathematical_background.md  original_test_mapping.md  publishing.md  quickstart.md
notebooks/: sunspots_cycle_analysis.ipynb
src/cyclical_fractional_test/: __init__.py  api.py  chebyshev.py  config.py  diagnostics.py  evaluation.py  exceptions.py  filters.py  grid.py  model.py  prediction.py  regression.py  results.py  spectral.py  validation.py
tests/: test_api.py  test_apply_filter.py  test_chebyshev.py  test_config.py  test_diagnostics.py  test_evaluation.py  test_filter_dispatch.py  test_filter_response_and_design.py  test_filters.py  test_fractional_coefficients.py  test_fractional_coefficients_dispatch.py  test_frequency_variance.py  test_frequency_variance_dispatch.py  test_grid.py  test_model.py  test_partial_pipeline_waves_7_9.py  test_periodogram.py  test_prediction.py  test_psi_xaa_dynamic_dispatch.py  test_psi_xaa_single_cycle.py  test_regression.py  test_residual_periodogram.py  test_results.py  test_spectral.py  test_time_variance.py  test_validation.py
